--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   google_fonts: ^6.2.1
+  image_picker: ^1.0.7
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
